--- a/mi.html
+++ b/mi.html
@@ -46,19 +46,19 @@
 
       <div class="player-box">
         <div class="player">
-          <img src="Images/rohitSharma.png" />
+          <img src="rohitSharma.png" />
           <h3>Rohit Sharma</h3>
           <p>Former captain and one of the best opening batsmen.</p>
         </div>
 
         <div class="player">
-          <img src="Images/Bumrah.png" />
+          <img src="Bumrah.png" />
           <h3>Jasprit Bumrah</h3>
           <p>World-class fast bowler known for deadly yorkers.</p>
         </div>
 
         <div class="player">
-          <img src="Images/hardik.png" />
+          <img src="hardik.png" />
           <h3>Hardik Pandya</h3>
           <p>Dynamic all-rounder and match winner.</p>
         </div>
@@ -82,9 +82,9 @@
     <section id="moments" class="section dark">
       <h2>Iconic Moments</h2>
       <div class="moments">
-        <img src="Images/mi1.png" />
-        <img src="Images/mi2.png" />
-        <img src="Images/mi3.png" />
+        <img src="mi1.png" />
+        <img src="mi2.png" />
+        <img src="mi3.png" />
       </div>
     </section>
 
@@ -95,3 +95,4 @@
     </footer>
   </body>
 </html>
+
