Fix HTML structure and update image paths
Updated image paths and fixed HTML structure.

--- a/rcb.html
+++ b/rcb.html
@@ -32,7 +32,7 @@
         Bengaluru. Founded in 2008, RCB is known for its loyal fan base and star
         players.
       </p>
-      <img src="Images/rcb-logo.png" alt="RCB Logo" height="310" />
+      <img src="rcb-logo.png" alt="RCB Logo" height="310" />
     </section>
 
     <!-- Players -->
@@ -41,19 +41,19 @@
 
       <div class="card-container">
         <div class="card">
-          <img src="Images/ViratKohli.png" alt="Virat Kohli" />
+          <img src="ViratKohli.png" alt="Virat Kohli" />
           <h3>Virat Kohli</h3>
           <p>Former captain and one of the greatest batsman in the world.</p>
         </div>
 
         <div class="card">
-          <img src="Images/rajatpatidar.png" alt="Rajat Patidar" />
+          <img src="rajatpatidar.png" alt="Rajat Patidar" />
           <h3>Rajat Patidar</h3>
           <p>Current captain known for his aggressive leadership.</p>
         </div>
 
         <div class="card">
-          <img src="Images/Romario.png" alt="Romario Shepherd" />
+          <img src="Romario.png" alt="Romario Shepherd" />
           <h3>Romario Shepherd</h3>
           <p>Explosive all-rounder famous for his big hitting.</p>
         </div>
@@ -75,10 +75,10 @@
     <section id="gallery" class="section">
       <h2>Team Moments</h2>
       <div class="gallery">
-        <img src="Images/rcb3.png" />
-        <img src="Images/rcb1.png" />
-        <img src="Images/rcb2.png" />
-        <video src="Images/virat_video.mp4" controls autoplay loop></video>
+        <img src="rcb3.png" />
+        <img src="rcb1.png" />
+        <img src="rcb2.png" />
+        <video src="virat_video.mp4" controls autoplay loop></video>
       </div>
     </section>
 
@@ -89,3 +89,4 @@
     </footer>
   </body>
 </html>
+
