Fix image path for Bumrah in player section

--- a/mi.html
+++ b/mi.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="player">
-          <img src="Bumrah.png" />
+          <img src="Images/Bumrah.png" />
           <h3>Jasprit Bumrah</h3>
           <p>World-class fast bowler known for deadly yorkers.</p>
         </div>
@@ -95,4 +95,5 @@
     </footer>
   </body>
 </html>
+
 
