--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         celebration of passion, teamwork, and sportsmanship.
       </p>
 
-      <img src="IPL_Image.jpg" alt="IPL Logo" />
+      <img src="Images/IPL_Image.jpg" alt="IPL Logo" />
 
       <h2>My Favourite Teams</h2>
       <div class="teams">
@@ -39,4 +39,3 @@
     </footer>
   </body>
 </html>
-
